# projeto1-minigoglebot

./: .gitignore  CMakeLists.txt  Makefile  README.txt  dm_rules  dm_rules.make  dm_tools  googlebot.txt  main.c  site.h  site_list.txt  sites.h  test.csv
source/: ArrayList.c  ArrayList.h  WordTree.c  WordTree.h  avl.c  avl.h  bool.h  googlebot.c  googlebot.h  list.c  list.h  main.c  site.c  site.h  sites.h
